Fix heading color and icon in dark mode

--- a/src/app/components/home/_dialogs/cookies/cookies.component.scss
+++ b/src/app/components/home/_dialogs/cookies/cookies.component.scss
@@ -15,6 +15,7 @@
 
 .info-icon{
   font-size: 24px;
+  color: var(--on-surface);
 }
 
 .container{
